# dio-fastapi

./: .gitignore  README.md  blog.db  pyproject.toml  tests.db
banco-poo/: banco.py
banco_poo/: banco.py  conexao.py  meu_banco.db
dio_blog/: database.py  main.py  pyproject.toml  security.py
dio_blog/controller/: auth.py  post.py
dio_blog/model/: post.py
dio_blog/schemas/: post.py
dio_blog/service/: post.py
dio_blog/src/dio_blog/controller/: auth.py
dio_blog/src/dio_blog/schemas/: auth.py  post.py
dio_blog/view/: post.py
stubs/: banco.pyi  conexao.pyi
stubs/dio_blog/: database.pyi  main.pyi  security.pyi
stubs/dio_blog/controller/: auth.pyi  post.pyi
stubs/dio_blog/model/: post.pyi
stubs/dio_blog/schemas/: auth.pyi  post.pyi
stubs/dio_blog/service/: post.pyi
stubs/dio_blog/view/: auth.pyi  post.pyi
