[project]
name="dio-fastapi-workspace"
version="0.0.1"
description="No description yet."
requires-python = ">=3.10"
readme = "README.md"
license = "MIT"
authors = [{name="Laercio Gil Pinheiro Bezerra"}]
dependencies = ["dio-blog", "banco-poo"]

[tool.uv]
managed = true
package = false

[tool.uv.workspace]
members = ["packages/*"]

[tool.uv.sources]
dio-blog = {workspace = true}
banco-poo = {workspace = true}

[dependency-groups]
dev = [
  {include-group = "lint"},
  {include-group = "test"},
  "mypy>=1.20.1",
  "pyright>=1.1.408",
]
lint = [
    "ruff>=0.15.11",
]
test = [
    "httpx>=0.28.1",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-mock>=3.15.1",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
line-length = 88
target-version = "py314"
fix = true
show-fixes = true
indent-width = 4
exclude = ["venv", ".venv", "env", ".env", "node_modules", "__pycache__"]

[tool.ruff.lint]
select = ["ALL"]
ignore = ["D", "T201", "INP001"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["ANN201", "S101"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.pyright]
typeCheckingMode = "standard"
pythonVersion = "3.12"
include = ["packages"]
exclude = [
  "**/.*",
  "**/venv",
  "**/.venv",
  "**/env",
  "**/.env",
  "**/node_modules",
  "**/__pycache__",
]
extraPaths = ["./packages"]
venv = ".venv"
venvPath = "."
executionEnvironments = [{ root = "packages" }]
reportMissingTypeStubs = true
stubPath = "stubs"